# cmm-prof-bug-repro

./: foo.cabal
app/: foo.hs
cbits/: Foo.cmm
src/: Foo.hs
